--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/swagger": "^4.7.15",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/validator": "^13.1.3",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
